<!--
  ~     Copyright (c) 2020 danielzhang130
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PythonTutor</string>
    <string name="ok">OK</string>
    <string name="global_frame">Global Frame</string>
    <string name="zoom_in">zoom in</string>
    <string name="string_representation">String Representation</string>
    <string name="super_classes">Super Classes</string>
    <string name="attributes">Attributes</string>
    <string name="parent">Parent: </string>
    <string name="module">Module</string>
    <string name="imported_faux_primitive">Imported Faux Primitive</string>
    <string name="default_parameters">Default Parameters</string>
    <string name="function">Function: %s</string>
    <string name="class_formatted">Class: %s</string>
    <string name="instance_formatted">Instance: %s</string>
    <string name="string_rep_formatted">String representation: %s</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="set">Set</string>
    <string name="tuple">Tuple</string>
    <string name="last">Last</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="first">First</string>
    <string name="close_drawer">close drawer</string>
    <string name="open_drawer">open drawer</string>
    <string name="go_to_heap">go to heap</string>
    <string name="insertion_sort">Insertion Sort</string>
    <string name="intro_to_python">Intro to Python</string>
    <string name="hello_world">Hello World</string>
    <string name="basics">Basics</string>
    <string name="for_else">For Else</string>
    <string name="factorial">Factorial</string>
    <string name="maths">Maths</string>
    <string name="square_root">Square root</string>
    <string name="greatest_common_divisor">Greatest common divisor</string>
    <string name="tower_of_hanoi">Tower of Hanoi</string>
    <string name="save_as_file">Save as file</string>
    <string name="load_from_file">Load from file</string>
    <string name="dark_mode">Dark mode</string>
    <string name="auto">Automatic</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="stdout">output</string>
    <string name="stack">frame</string>
    <string name="heap">object</string>
    <string name="object_oriented">Object Oriented</string>
    <string name="Class">Class</string>
    <string name="constructor">Constructor</string>
    <string name="inheritance">Inheritance</string>
    <string name="an_error_has_occurred">An error occurred</string>
    <string name="please_try_again_later">Please try again later</string>
    <string name="uncaught_exception">Uncaught Exception</string>
    <string name="line_char_pos">line %d: %s</string>
    <string name="tap_to_show_navigation_menu">Tap to show navigation menu</string>
    <string name="see_code_samples_and_more_options">See code samples and more options</string>
    <string name="tap_on_a_code_sample">Tap on a code sample</string>
    <string name="load_it_to_the_editor">Load it to the editor</string>
    <string name="tap_here_to_visualize_your_code">Tap here to visualize your code</string>
    <string name="drag_here_to_resize_windows">Drag here to resize windows</string>
    <string name="empty"/>
    <string name="about">About</string>
    <string name="about_text" tools:ignore="TypographyOther">Version %s\n\nSource code of this
app is available at https://github.com/danielzhang130/PythonTutorApp licensed under GNU GPLv3\n\nCopyright (c)
2020 danielzhang130\n\nThis program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.\n\nThis program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License
along with this program.  If not, see http://www.gnu.org/licenses.\n\nNot affiliated with pythontutor.com.\n\nCertain
code samples are Copyright (c) Philip J. Guo (philip@pgbovine.net)\n\nPermission is hereby granted, free of charge, to any person obtaining a
copy of this software and associated documentation files (the
"Software"), to deal in the Software without restriction, including
without limitation the rights to use, copy, modify, merge, publish,
distribute, sublicense, and/or sell copies of the Software, and to
permit persons to whom the Software is furnished to do so, subject to
the following conditions:\n\nThe above copyright notice and this permission notice shall be included
in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
</resources>
