<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright (c) 2020 danielzhang130
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/first"
        android:title="@string/first"
        android:icon="@drawable/ic_first_page"
        app:iconTint="?android:attr/colorControlNormal"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/prev"
        android:title="@string/previous"
        android:icon="@drawable/ic_chevron_left"
        app:iconTint="?android:attr/colorControlNormal"
        app:showAsAction="always"/>

    <item
        android:id="@+id/next"
        android:title="@string/next"
        android:icon="@drawable/ic_chevron_right"
        app:iconTint="?android:attr/colorControlNormal"
        app:showAsAction="always"/>

    <item
        android:id="@+id/last"
        android:title="@string/last"
        android:icon="@drawable/ic_last_page"
        app:iconTint="?android:attr/colorControlNormal"
        app:showAsAction="ifRoom"/>
</menu>